ARROW-3762: [C++] manage ChunkedArrayBuilder capacity explicitly

ChunkedArrayBuilder should never request BinaryBuilder reserve space for more strings than it can hold (`kListMaximumElements`); with this change it will instead of begin a new chunk

Author: Benjamin Kietzman <bengilgit@gmail.com>

Closes #4695 from bkietz/3762-Parquet-arrowTable-reads-error-when-over and squashes the following commits:

95a4e30ff <Benjamin Kietzman> add configurable maximum element count to ChunkedBinaryBuilder
5331a2cb7 <Benjamin Kietzman> add test for ChunkedBinaryBuilder's new reserve behavior
3eb57198b <Benjamin Kietzman> manage ChunkedBinaryBuilder's capacity
d626c073c <Benjamin Kietzman> attempted fix, killed: OOM
cb000ab2e <Benjamin Kietzman> add (failing) test which repros issue in c++